Fixed issue where horizontal scrollbar briefly shows between the $wrapperWidth and the $wrapperWidth + scrollbarWidth

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,6 +1,6 @@
 $wrapperWidth        : 960px;
 $wrapperBreakoutWidth: 120px;
-$mobilePadding       : 15px;
+$mobilePadding       : 25px;
 $gutter              : 15px;
 $maxCollistCols      : 5; // always make this number the lowest it needs to be, it greatly affects filesize
 $bodyBackgroundColor : #F5F5F5;
@@ -15,7 +15,7 @@ $spacer: (
 	md : 15px,
 	lg : 20px,
 	xl : 25px,
-	xxl: 30px
+	xxl: 50px
 );
 
 $breakpoints: (
